# pypackage-public

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  developer-experience-request.md  feature_request.md
.github/workflows/: branch.yml  release.yml
docs/: conf.py  index.rst  requirements.txt
docs/components/: placeholder.rst
docs/getting_started/: basic_tutorial.rst
package_name/: __init__.py  base_exc.py  exceptions.py
package_name/placeholder/: placeholder.py
test/functional/: test_functional.py
