[project]
name = "package_name"
version = "0.0.0"  # placeholder - updates during CI
description = "<placeholder description>"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = []
license = { text = "MIT" }
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
# Documentation = ""  # Add readthedocs link
# Repository = ""  # Add github repository link
# Issues = ""  # Add github issues link

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
    "sphinx-autodoc-typehints>=3.0.1",
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
    "twine>=6.1.0",
    "pytest-mock>=3.14.0",
]

[tool.isort]
profile = "black"
line_length = 79
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[tool.coverage.report]
# omit = []  # Omit integration imports, e.g. in __init__.py

[tool.setuptools]
license-files = ["LICENSE"]  # Ensure this matches the actual path to your license file
